--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>esto es de vistas2ale</title>
+<title>esto es de vistas2alefdgb</title>
 </head>
 
 
