vista de usuario en desarrollo funcionando

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,27 +2,45 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>esto es de vistas2alefdgb</title>
+<title>Hotel Solutions</title>
 </head>
 
+<h1 style="text-align: center; font-size: 64px;">Hotel Solutions</h1>
 
+
+<a
+	style=" 
+		font-size: 15px;
+		display: block; 
+		width: 115px; 
+		height: 25px; 
+		background: #B6BA2A; 
+		padding: 10px; 
+		text-align: center; 
+		border-radius: 5px; 
+		color: white; 
+		font-weight: bold; 
+		text-decoration: blink;
+		margin-top: 15px;"
+	
+	href="/HotelSolutionsServlet/Usuario.html"> Consultar Usuario </a>
+	
+<a
+	style=" 
+		font-size: 15px;
+		display: block; 
+		width: 115px; 
+		height: 25px; 
+		background: #B6BA2A; 
+		padding: 10px; 
+		text-align: center; 
+		border-radius: 5px; 
+		color: white; 
+		font-weight: bold; 
+		text-decoration: blink;"
+	
+	href="/HotelSolutionsServlet/registrarse.html"> Nuevo Usuario </a>
 
 <body>
-
-<FORM method="POST" action=" /SistemaFrances/MostrarCliente ">
-Búsqueda de clientes<BR><BR>
-<TABLE border="0">
-<TR>
-<TD>DNI:</TD>
-<TD><INPUT name="dni"></TD>
-</TR>
-<TR>
-<TD>
-<INPUT type="submit" value="Consultar">
-</TD>
-</TR>
-</TABLE>
-
-
 </body>
 </html>
