--- a/WebContent/registrarse.html
+++ b/WebContent/registrarse.html
@@ -6,8 +6,8 @@
  		<TITLE>Hotel Solutions - Usuario </TITLE>
  	</HEAD>
 	 <BODY>
- 		<FORM method="GET" action=" /HotelSolutionsServlet/MostrarUsuarioServlet" >
- 			Búsqueda de usuarios<BR><BR>
+ 		<FORM method="GET" action=" /HotelSolutionsServlet/AgregarUsuarioController" >
+ 			Nuevo Usuario<BR><BR>
  			<TABLE border="0" >
  				<TR>
  					<TD>Nombre de Usuario: </TD>
